k8s/bill-pay-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace relibank --out k8s/
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: bill-pay-service
  name: bill-pay-service
  namespace: relibank
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bill-pay-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --namespace relibank --out k8s/
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: bill-pay-service
    spec:
      containers:
        - env:
            - name: KAFKA_BROKER
              value: kafka:29092
            - name: TRANSACTION_SERVICE_URL
              value: http://transaction-service:5000
          image: bill-pay-service
          name: bill-pay-service
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
