k8s/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace relibank --out k8s/
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: kafka
  name: kafka
  namespace: relibank
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --namespace relibank --out k8s/
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: kafka
    spec:
      containers:
        - env:
            - name: ALLOW_PLAINTEXT_LISTENER
              value: "yes"
            - name: KAFKA_BROKER_ID
              value: "1"
            - name: KAFKA_CFG_ADVERTISED_LISTENERS
              value: PLAINTEXT://kafka:29092,EXTERNAL://localhost:9092
            - name: KAFKA_CFG_LISTENERS
              value: PLAINTEXT://:29092,EXTERNAL://:9092
            - name: KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP
              value: PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
            - name: KAFKA_CFG_ZOOKEEPER_CONNECT
              value: zookeeper:2181
          image: bitnami/kafka:3.5
          livenessProbe:
            exec:
              command:
                - kafka-topics.sh
                - --bootstrap-server
                - localhost:9092
                - --list
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: kafka
          ports:
            - containerPort: 9092
              protocol: TCP
      hostname: kafka
      restartPolicy: Always
