k8s/notifications-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace relibank --out k8s/
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: notifications-service
  name: notifications-service
  namespace: relibank
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notifications-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --namespace relibank --out k8s/
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: notifications-service
    spec:
      containers:
        - args:
            - python
            - notifications_service.py
          image: notifications-service
          name: notifications-service
      restartPolicy: Always
