k8s/accounts-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace relibank --out k8s/
    kompose.version: 1.37.0 (HEAD)
  labels:
    app: accounts-db
  name: accounts-db
  namespace: relibank
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: accounts-db
  type: ClusterIP
