k8s/scheduler-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --namespace relibank --out k8s/
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: scheduler-service
  name: scheduler-service
  namespace: relibank
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: scheduler-service
